traces/bug_51.txt
examples++-load/Morley.cpp:41: error: DEAD_STORE
  The value written to &gauss2 (type double) is never used.
Showing all 1 steps of the trace


examples++-load/Morley.cpp:41:7: Write of unused value
39.       {  
40.         const double gauss1=(1.-sqrt(1./3.))/2;
41.         const double gauss2=1.-gauss1;
            ^
42.   
43.         const R2 Pt[] = { R2(0,0),R2(1,0),R2(0,1),R2(0.5,0.5), R2(0,0.5),R2(0.5,0)}; 
